# a2a-rust

./: .gitignore  .gitlab-ci.yml  .releaserc.json  Cargo.toml  LICENSE  README.md
.gitlab/ci/: images.gitlab-ci.yml  rust.gitlab-ci.yml
crates/a2a-client/: Cargo.toml
crates/a2a-client/src/: binding.rs  builder.rs  error.rs  jsonrpc.rs  lib.rs  rest.rs  sse.rs
crates/a2a-server/: Cargo.toml
crates/a2a-server/src/: error.rs  handler.rs  lib.rs  store.rs
crates/a2a-transport/: Cargo.toml
crates/a2a-transport-wasi/: Cargo.toml
crates/a2a-transport-wasi/src/: client.rs  error.rs  lib.rs  poll.rs  server.rs
crates/a2a-transport-wasi/tests/: client_test.rs
crates/a2a-transport/src/: error.rs  lib.rs  types.rs
crates/a2a-types/: Cargo.toml  build.rs
crates/a2a-types/schema/: a2a.json
crates/a2a-types/src/: error.rs  lib.rs
crates/a2a-wasm-component/: Cargo.toml
crates/a2a-wasm-component/src/: client.rs  convert.rs  jsonrpc.rs  lib.rs  rest.rs  server.rs
crates/a2a-wasm-component/tests/: README.md  integration_test.rs  server_integration_test.rs
crates/a2a-wasm-component/tests/common/: mod.rs  server.rs  wasm_runner.rs  wasm_server.rs
crates/a2a-wasm-component/tests/fixtures/helloworld/: .gitignore  __main__.py  pyproject.toml
crates/a2a-wasm-component/tests/fixtures/wasm_server_tests/: conftest.py  pyproject.toml  test_wasm_server.py
crates/a2a-wasm-component/tests/fixtures/wasm_server_tests/scenarios/: agent_card_discovery.py  cancel_task_not_found.py  cancel_task_success.py  get_task_after_send.py  get_task_not_found.py  journey_basic_flow.py  journey_error_handling.py  json_rpc_invalid_method.py  send_message_creates_task.py  send_message_success.py
crates/a2a-wasm-component/tests/snapshots/: integration_test__send_message_response.snap  server_integration_test__agent_card_discovery.snap  server_integration_test__cancel_task_not_found.snap  server_integration_test__cancel_task_success.snap  server_integration_test__get_task_after_send.snap  server_integration_test__get_task_not_found.snap  server_integration_test__journey_basic_flow.snap  server_integration_test__journey_error_handling.snap  server_integration_test__json_rpc_invalid_method.snap  server_integration_test__send_message_success.snap
crates/a2a-wasm-component/wit/: a2a.wit
docs/plans/: 2026-01-02-a2a-rust-design.md  2026-01-02-a2a-rust-implementation.md  2026-01-02-wasi-http-implementation.md  2026-01-03-a2a-wasm-component-implementation.md  2026-01-03-a2a-wasm-component-integration-tests.md  2026-01-03-a2a-wasm-component-wit-design.md  2026-01-03-gitlab-ci-design.md  2026-01-03-gitlab-ci-implementation.md  2026-01-04-a2a-server-implementation-design.md  2026-01-04-a2a-server-implementation.md  2026-01-04-client-auto-negotiation.md  2026-01-04-rest-binding-design.md  2026-01-04-rest-binding-impl.md  2026-01-05-a2a-v1-method-names.md  2026-01-05-pbjson-migration.md  2026-01-05-proto-migration-design.md  2026-01-05-proto-migration-impl.md  2026-01-05-server-integration-test-refactor-design.md  2026-01-05-server-integration-test-refactor.md  2026-01-05-wasm-server-integration-tests-design.md  2026-01-05-wasm-server-integration-tests.md
images/rust/wasm32-wasip2/: Dockerfile
images/rust/x86_64-unknown-linux-gnu/: Dockerfile
scripts/: test-cross-impl.sh
tests/: README.md
