[package]
name = "a2a-types"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true

[build-dependencies]
typify.workspace = true
schemars.workspace = true
serde_json.workspace = true
