[package]
name = "a2a-wasm-component"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
a2a-types.workspace = true
a2a-client.workspace = true
a2a-server.workspace = true
a2a-transport-wasi.workspace = true
wit-bindgen.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true

[dev-dependencies]
tokio = { version = "1.48", features = ["rt-multi-thread", "macros"] }
wasmtime = "29"
wasmtime-wasi = "29"
wasmtime-wasi-http = "29"
insta = { version = "1.42", features = ["json", "redactions", "filters"] }
serde_json = "1.0"
