[package]
name = "a2a-wasm-component"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
a2a-types.workspace = true
a2a-client.workspace = true
a2a-server.workspace = true
a2a-transport-wasi.workspace = true
wit-bindgen.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
pbjson-types = "0.9"

[dev-dependencies]
tokio = { version = "1.48", features = ["rt-multi-thread", "macros", "net", "process"] }
wasmtime = "29"
wasmtime-wasi = "29"
wasmtime-wasi-http = "29"
insta = { version = "1.42", features = ["json", "redactions", "filters"] }
serde_json = "1.0"
hyper = { version = "1.8", features = ["server", "http1"] }
http-body-util = "0.1"
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4"
