[project]
name = "helloworld"
version = "0.1.0"
description = "HelloWorld agent example that only returns Messages"
requires-python = ">=3.10"
dependencies = [
    # TODO: Switch back to PyPI once a2a-sdk v1.0 is released
    # Using PR #572 branch for proto-compliant enum naming (ROLE_USER vs user)
    "a2a-sdk @ git+https://github.com/muscariello/a2a-python@a2a_proto_refactor",
    "click>=8.1.8",
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "langchain-google-genai>=2.1.4",
    "langgraph>=0.4.1",
    "pydantic>=2.11.4",
    "python-dotenv>=1.1.0",
    "sse-starlette>=2.3.5",
    "starlette>=0.46.2",
    "uvicorn>=0.34.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
